# slipstream

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agents/: __init__.py  baselines.py
env/: __init__.py  execution_env.py
experiments/: eval.py  train.py
reports/: eval_results.json  results.md
tests/: test_env.py
