[project]
name = "slipstream"
version = "0.1.0"
description = "Reinforcement learning environment for optimal trade execution using Almgren-Chriss market impact models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Josh Finney"}
]
keywords = [
    "reinforcement-learning",
    "gymnasium",
    "market-microstructure",
    "optimal-execution",
    "almgren-chriss",
    "algorithmic-trading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/joshfinney/slipstream"
Repository = "https://github.com/joshfinney/slipstream"
Issues = "https://github.com/joshfinney/slipstream/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
offline = [
    "d3rlpy>=2.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled separately

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
